# ITK_Haralick

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: ITK_HaralickBuildTreeSettings.cmake.in  ITK_HaralickConfig.cmake.in  ITK_HaralickConfigVersion.cmake.in
cmake/Modules/: FindValgrind.cmake
include/: IncrementalWeightedMeanVarianceComputer.h  itkCooccurrenceMatrix.h  itkCooccurrenceMatrix.hxx  itkCooccurrenceMatrixNormalizerFilter.h  itkCooccurrenceMatrixToHaralickTextureFeaturesFilter.h  itkCooccurrenceMatrixToHaralickTextureFeaturesFilter.hxx  itkCoocurrenceMatrix.h  itkCoocurrenceMatrix.hxx  itkCoocurrenceMatrixNormalizerFilter.h  itkCoocurrenceMatrixToHaralickTextureFeaturesFilter.h  itkCoocurrenceMatrixToHaralickTextureFeaturesFilter.hxx  itkGLCMImageCalculator.h  itkGLCMImageCalculator.hxx  itkGreyLevelCooccurrenceMatrix.h  itkGreyLevelCooccurrenceMatrix.hxx  itkGreyLevelCooccurrenceMatrixNormalizerFilter.h  itkGreyLevelCooccurrenceMatrixToHaralickTextureFeaturesFilter.h  itkGreyLevelCooccurrenceMatrixToHaralickTextureFeaturesFilter.hxx  itkHaralickFeaturesGLCMCalculator.h  itkHaralickFeaturesGLCMCalculator.hxx  itkScalarImageToCooccurrenceMatrixFilter.h  itkScalarImageToCooccurrenceMatrixFilter.hxx  itkScalarImageToGreyLevelCooccurrenceMatrixFilter.h  itkScalarImageToGreyLevelCooccurrenceMatrixFilter.hxx  itkScalarImageToHaralickTextureFeaturesFilter.h  itkScalarImageToHaralickTextureFeaturesImageFilter.h  itkScalarImageToLocalHaralickTextureFeaturesFilter.h
test/: GLCMImageCalculator.cpp  GreyLevelCooccurrenceMatrix.cpp  HaralickFeaturesGLCMCalculator.cpp  ScalarImageToFeatureImages.cpp  ScalarImageToHaralickTextureFeaturesImage.cpp  ScalarImageToHaralickTextureFeaturesImage_statistics.cpp  ScalarImageToHaralickTextureFeatures_loop.cpp  cooccurrence_matrix.cpp  coocurrence_matrix.cpp  filters.cpp  haralick_iterations.cpp  image_to_features.cpp  image_to_local_features.cpp  image_to_local_features_unlooped.cpp  whole_image_to_local_glcm_algorithm.cpp
